--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "mass-mailer",
   "version": "1.0.0",
   "description": "Quick custom mass mailer.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "npm run lint; tsc",
     "watch": "tsc -w",
     "serve": "nodemon --inspect --watch dist/ -d 1 ./dist/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +26,9 @@
     "nodemon": "^1.18.3",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.7",
+    "mailgun-js": "^0.20.0"
   }
 }
