--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Quick custom mass mailer.",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "build": "npm run lint; tsc",
+    "build": "tsc",
     "watch": "tsc -w",
     "serve": "nodemon --inspect --watch dist/ -d 1 ./dist/index.js",
     "start": "node dist/index.js",
@@ -22,13 +21,12 @@
   },
   "homepage": "https://github.com/hwillson/mass-mailer#readme",
   "devDependencies": {
-    "@types/node": "^10.5.2",
-    "nodemon": "^1.18.3",
-    "tslint": "^5.11.0",
-    "typescript": "^2.9.2"
+    "@types/node": "^14.0.14",
+    "nodemon": "^2.0.4",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
-    "csvtojson": "^2.0.7",
-    "mailgun-js": "^0.20.0"
+    "csvtojson": "^2.0.10",
+    "mailgun-js": "^0.22.0"
   }
 }
